# api-drift-agent

./: .gitignore  README.md  WORK_DONE.md  pyproject.toml
.github/workflows/: drift-check.yml
mnt/user-data/outputs/drift-detector/.github/drift-check-action/: README.md
mnt/user-data/outputs/drift-detector/src/drift_agent/agent/: README.md
mnt/user-data/outputs/drift-detector/src/drift_agent/code_analyzer/: README.md
mnt/user-data/outputs/drift-detector/src/drift_agent/context_tools/: README.md
src/drift_agent/: __init__.py  cli.py  errors.py  types.py
src/drift_agent/agent/: __init__.py  core.py  prompts.py  tools.py
src/drift_agent/code_analyzer/: __init__.py  extractor.py  resolver.py  walker.py
src/drift_agent/context_tools/: __init__.py  coverage.py  git.py  search.py  toolkit.py
src/drift_agent/diff_engine/: __init__.py  classifier.py  comparator.py
src/drift_agent/patch_generator/: __init__.py  code_patch.py  generator.py  spec_patch.py
src/drift_agent/spec_parser/: __init__.py  parser.py  resolver.py
tests/: test_agent.py  test_code_analyzer.py  test_diff_engine.py  test_drift_lab_fixture.py  test_patch_generator.py  test_spec_parser.py
tests/fixtures/apps/drift_lab_app/: main.py
tests/fixtures/apps/drift_lab_app/routers/: admin.py  orders.py  users.py
tests/fixtures/apps/multi_file_app/: main.py
tests/fixtures/apps/multi_file_app/routers/: users.py
tests/fixtures/apps/simple_app/: app.py
tests/fixtures/specs/: circular_refs.yaml  drift_lab.yaml  simple.yaml  with_refs.yaml
(+3 files in other folders)
